--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,2 +1,6 @@
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'node_modules/bootstrap-vue/src/index.scss';
+
+.page{
+  margin: 40px 0 0;
+}
